--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -1,32 +1,37 @@
-<!-- SpecialPage raspberrypi _V.15.04.20
+<!--    ==========================================================================
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
 
-CC-BY:		Alexandros Papaspyrou
-URL:		https://alexandroshub.github.io
-Contact: 	a-papaspyrou@outlook.com.gr-->
+    Alien v2
+    Updated: SpecialPage 'RPi' Nov 14, 2020
+    Website: https://alexandroshub.github.io
+    Contact: 	a-papaspyrou@outlook.com.gr
+	CC-BY international 4 2011-2020 Alexandros Papaspyrou
+       
+   Welcome in my personal website 100% HTML Hosted by Github
+   Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
+  ==========================================================================  -->
+  
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | Raspberry pi</title>
-<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+<title>Papaspyrou | Programming | Raspberry pi</title>
+	<!--/new logo/--><link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
+	<!--  /////// meta information  /////// -->
+      <meta charset="UTF-8">
+      <meta name="author" content="Alexandros Papaspyrou">
+      <meta name="description" content="Personal website of Papaspyrou Alexandros. All about IoT projects with arduino or raspberryPi, Automations, Robotics and more...">
+      <meta name="keywords" content="Automations, Programming , Technology, IoT , RaspberyPi">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--  /////// link information  /////// -->
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>/* style information */
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-body, html {
-    height: 100%;
-    line-height: 1.8;
-}
-.w3-bar .w3-button {
-    padding: 16px;
-}
+body, html {height: 100%; line-height: 1.8;}
+.w3-bar .w3-button {padding: 16px;}
 .bgimg {
     background-position: center;
     background-size: cover;
@@ -184,9 +189,16 @@ www.raspberrypi.org</a><br>
 o Raspbian είναι το official λειτουργικό σύστημα του Raspberry Pi και μπορείτε να το κατεβάσετε δωρεάν απ΄ την επίσημη ιστοσελίδα του <a href="https://www.raspberrypi.org/software/operating-systems/">(κλικ εδώ)</a>.
 
 Μπορείτε φυσικά να δοκιμάσετε και άλλα λειτουργικά συστήματα τα οποία είναι συμβατά με αυτό, όπως τα Ubuntu Mate, Snappy Ubuntu Core, Windows 10 IOT και άλλα τα οποία μπορείτε να βρείτε  <a href="https://www.raspberrypi.org/software/">εδώ</a> ή ψάχνοντας στο διαδίκτυο. Τα tutorials που θα βρείτε στο site μας βασίζονται και είναι δοκιμασμένα στο Raspbian OS και ίσως να μην είναι πλήρως συμβατά με το λειτουργικό σύστημα που ίσως επιλέξετε να χρησιμοποιήσετε. Βέβαια επειδή το Raspbian είναι ένα λειτουργικό βασισμένο στα linux, ίσως οι εντολές που θα βρείτε να μπορούν να τρέξουν και σε άλλες εκδόσεις linux, όπως τα Ubuntu Mate. 
-<hr>
+<br><span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
 
-<br><br><span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
+<h3>Virtual Network Computing (VNC)</h3>
+<br><span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
+
+<h3>resolution</h3>
+Το Raspberry Pi αναγνωρίζει αυτόματα την ανάλυση της οθόνης σας μέσω της HDMI θύρας. Στην περίπτωση που η ανάλυση είναι λάθος ή η οθόνη σας δεν έχει είσοδο HDMI (θα πρέπει να πάρετε ένα HDMI to VGA converter/adapter) μπορείτε να ρυθμίσετε την ανάλυση του RPi μέσα απ' το Raspbian OS.
+<br>
+Για να προσαρμόσουμε την ανάλυση της οθόνης μας θα πρέπει να πάμε στο <b>Menu-> Προτιμήσεις-> Raspberry Pi Configuration</b> και να πατήσουμε πάνω εκεί που λέει Set Resolution. Όπως βλέπουμε εμφανίζει αρκετές επιλογές για να διαλέξουμε ποια ανάλυση είναι η καλύτερη για την οθόνη μας. Εμείς θα επιλέξουμε την 1280x720 60MHz με αναλογία 16:9 .
+
 </p>
 </div>
 
@@ -210,6 +222,35 @@ virtualbox</a>
 
 </div>
 
+<br>
+<button class="accordion2">Πές την γνώμη σου!
+</button>
+<div class="panel">
+
+ <div id="disqus_thread"></div>
+            <script>
+              /**
+               *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+               *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+              /*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+              (function () {
+                // DON'T EDIT BELOW THIS LINE
+                var d = document,
+                  s = d.createElement("script");
+                s.src = "https://alexandroshub.disqus.com/embed.js";
+                s.setAttribute("data-timestamp", +new Date());
+                (d.head || d.body).appendChild(s);
+              })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </div>
+          <br>
+</div>
 
 <script>
 var acc = document.getElementsByClassName("accordion2");
