--- a/portfolio2021.html
+++ b/portfolio2021.html
@@ -1,3 +1,7 @@
+<footer style="background-color: #151128;
+ color: #FF3B2F;">
+ <center>New IoT project is under construction!</center>
+</footer>
 <!--    ==========================================================================
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -5,7 +9,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 
     Alien v2
-    Updated: SpecialPage 'Portfolio' Nov 10, 2020
+    Updated: SpecialPage 'Portfolio' Nov 15, 2020
     Website: https://alexandroshub.github.io
     Contact: 	a-papaspyrou@outlook.com.gr
 	CC-BY international 4 2011-2020 Alexandros Papaspyrou
@@ -258,7 +262,6 @@ Publications              </div>
 <i class="far fa-file-alt" style="color: green;"></i><b> Publication</b>  'Η εξέλιξη των Η/Υ'
 </button>
 <div class="panel">
-<p>
  <div class="w3-container" style="background-color: #3a3a3a;" id="port">
         <center>
           <span class="w3-opacity w3-large w3-border-dark-grey w3-padding-16" style="text-shadow: 1px 1px 0 #444;">
@@ -285,7 +288,6 @@ Publications              </div>
           </iframe>
         </div>
       </div>
-</p>
 </div>
 
 
@@ -341,46 +343,14 @@ for (i = 0; i < acc.length; i++) {
 </script>
 
 </div>
-</div></div></div>
+</div>
 
 <!--  ---------------------------------- -->
-
-      <footer style="background-color: #0f1724; color: #d1d3d8;">
-        <style>
-          #blogkgrady {
-            height: 30px;
-            background-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgba(241, 241, 241, 1));
-          }
-        </style>
-        <div id="blogkgrady"></div>
-        <div class="w3-row-padding">
-          <center>
-            <p>Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.</p>
+<footer style=" height: 75%;background: linear-gradient(to bottom left, #1C1C1C 0%, #294F69 100%); color: #51B7FF; padding: 25px 16px;">
+  <center>
+            <p>Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα,<br> ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.</p>
 <i class="fab fa-facebook-messenger"onclick="window.location.href='https://www.messenger.com/t/alexandroshub';" style="cursor:pointer" title="m.me/alexandroshub"></i>
-          </center>
-        </div>
-      </footer>
-
-      <!-- 
-      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
-      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
-      //////////// Footer 2020 ////////////////  Footer 2020 /////////////  -->
-      <style>
-        footer {
-          background-color: #19273c;
-          color: #4b759b;
-        }
-      </style>
-      <footer class="w3-center">
-        <style>
-          #footy {
-            height: 50px;
-            background-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgba(15, 23, 36, 1));
-          }
-        </style>
-        <div id="footy"></div>
-        <div class="w3-row">
-          <p class="w3-tooltip">
+           <p class="w3-tooltip">
             you have reached the end <br />
             <span class="w3-text w3-tag">
               <a href="#home"  style="text-decoration: none"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
@@ -388,13 +358,7 @@ for (i = 0; i < acc.length; i++) {
           </p>
           <!-- Signature -->
           <img src="https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width: 340px;" alt="Papaspyrou Alexandros" align="bottom" />
-          <style>
-            div.a {
-              font-size: 12px;
-            }
-          </style>
-          <div class="a">
-            <p>
+           <p>
               <link
                 href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
                 rel="stylesheet"
@@ -402,14 +366,10 @@ for (i = 0; i < acc.length; i++) {
                 crossorigin="anonymous"
               />
               <i class="fa fa-creative-commons"></i>2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a>
-            </p>
-          </div>
-        </div>
-      </footer>
-      <!-- //////////// Footer 2020 ////////////////  Footer 2020 /////////////
-      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
-      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
-      -->
+            </p>           </center>
+
+</footer>
+
 
       <!-- ////////// Scripts Zone ////////// -->
 
@@ -430,6 +390,6 @@ for (i = 0; i < acc.length; i++) {
         }
         document.getElementById("myLink").click();
       </script>
-    </div>
+ 
   </body>
 </html>
