--- a/portfolio2021.html
+++ b/portfolio2021.html
@@ -9,7 +9,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 
     Alien v2
-    Updated: SpecialPage 'Portfolio' Nov 15, 2020
+    Updated: SpecialPage 'Portfolio' Nov 10, 2020
     Website: https://alexandroshub.github.io
     Contact: 	a-papaspyrou@outlook.com.gr
 	CC-BY international 4 2011-2020 Alexandros Papaspyrou
@@ -346,7 +346,7 @@ for (i = 0; i < acc.length; i++) {
 </div>
 
 <!--  ---------------------------------- -->
-<footer style=" height: 75%;background: linear-gradient(to bottom left, #1C1C1C 0%, #294F69 100%); color: #51B7FF; padding: 25px 16px;">
+<footer style="background: linear-gradient(to bottom left, #1C1C1C 0%, #294F69 100%); color: #51B7FF; padding: 25px 16px;">
   <center>
             <p>Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα,<br> ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.</p>
 <i class="fab fa-facebook-messenger"onclick="window.location.href='https://www.messenger.com/t/alexandroshub';" style="cursor:pointer" title="m.me/alexandroshub"></i>
@@ -358,7 +358,7 @@ for (i = 0; i < acc.length; i++) {
           </p>
           <!-- Signature -->
           <img src="https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width: 340px;" alt="Papaspyrou Alexandros" align="bottom" />
-           <p>
+           <p   style="font-size: 12px;">
               <link
                 href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
                 rel="stylesheet"
