--- a/welcome21.html
+++ b/welcome21.html
@@ -107,7 +107,7 @@
         <!-- End About Section -->
          <p>Νομίζω πως έχουμε πει αρκετά και πλέον είσαι έτοιμος να συνεχίσεις και να επισκεφτείς την προσωπική μου ιστοσελίδα. Σου εύχομαι καλή περιήγηση και για ότι χρειαστείς παραμένω στη διάθεσή σου.</p> <center>
          <button class="w3-button w3-red w3-padding-large w3-section">
-        <a href="https://alexandroshub.github.io/cv"> <i class="fa fa-external-link w3-margin-right"></i>ENTER</a></button></center>
+        <a href="https://alexandroshub.github.io/"> <i class="fa fa-external-link w3-margin-right"></i>ENTER</a></button></center>
       </div>
       <!-- Footer -->
       <footer class="w3-container w3-padding-12 w3-center w3-opacity w3-xlarge" style="margin:-24px">
