--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Hotjar Tracking Code --> 
 <!--
 <script> (function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:1806578,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1;  r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script>
--->
+-->   	  <meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/nextgenindex21">
+
       <!--  /////// meta information  /////// -->
       <meta charset="UTF-8">
       <meta name="author" content="Alexandros Papaspyrou">
