--- a/nextgenindex21.html
+++ b/nextgenindex21.html
@@ -192,7 +192,7 @@
       <br>
       <center>
         <br>
-        <a href="https://alexandroshub.github.io/cv.html">
+        <a href="https://alexandroshub.github.io/plus.html">
           <div class="w3-third w3-hover-blue"  style="border-radius: 8px; padding: 10px 20px;">
             <h3>Plus</h3>
             <i class="fas fa-icons" style="font-size:24px"></i> 
@@ -201,7 +201,7 @@
             </div>
           </div>
         </a>
-        <a href="https://alexandroshub.github.io/cv.html">
+        <a href="https://alexandroshub.github.io/portfolio.html">
           <div class="w3-third w3-hover-blue"  style="border-radius: 8px; padding: 10px 20px;">
             <h3>Portfolio</h3>
             <div class="w3-row " style="padding-bottom:16px">
