--- a/cinema.html
+++ b/cinema.html
@@ -1,62 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>AP // Cinema</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-	
-		body {
-			font: 300 15px/1.5 "Helvetica Neue", helvetica, arial, sans-serif;
-			background: linear-gradient(to top right, #000 0%, #19273c 100%)}           
-        		margin: 15px;
-		}
-	
-		article {
-			width: 600px;
-			margin: 0 auto;
-			background: #000;
-			color: #fff;
-			border-radius: 5px;
-			box-shadow: 0 0 15px 2px #666;
-		}
-	
-		section {
-			clear: left;
-		}
-	
-		h1 {
-			font-size: 45px;
-			font-weight: 100;
-			letter-spacing: 15px;
-			text-align: center;
-            			color: #fff;
-
-		}
-
-		h1, #main_content, #dog_link {
-			padding: 15px;
-		}
-
-	
-	</style>
-	<!--[if lt IE 9]><script src="/r10/html5shiv.js"></script><![endif]-->
+  <title>AlexandrosHub CINEMA</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+ 
+  <style>
+body {
+  background-color: #000; color:#fff;
+}
+</style>
 </head>
 <body>
-	<article>
-		<h1>Cinema // soon...</h1>
 
+<div class="container">
+  <h2>AlexandrosHub CINEMA</h2>
+  <p>Πρεμιέρα με τη ταινία: Έτερος Εγώ και δώρο το making of!</p>
+<iframe src="https://www.youtube.com/embed/y3zho2aV2bs"  width="59%" height="100%">
+</iframe>
 
-		<section id="main_content">
-		<center>	
-        <p>	Το ηθικό είναι νόμιμο, αλλά το νόμιμο δεν είναι πάντα ηθικό</p><iframe width="560" height="315" src="https://www.youtube.com/embed/lSA7mAHolAw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-		</section>
+<iframe src="https://www.youtube.com/embed/VRefVArMcnk"  width="39%" height="100%">
+</iframe>
 
-<!-- Link back to HTML Dog: -->
-<center><p id="alexandroshub"><a href="https://alexandroshub.github.io/"><img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" alt="alexandroshub" style="width:50px;" alt="Papaspyrou Alexandros"></a></p></center>
-	</article>
+</div>
+
 </body>
 </html>
