--- a/cinema.html
+++ b/cinema.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,14 +17,19 @@ body {
 
 <div class="container">
   <h2>AlexandrosHub CINEMA</h2>
-  <p>Πρεμιέρα με τη ταινία: Έτερος Εγώ και δώρο το making of!</p>
-<iframe src="https://www.youtube.com/embed/y3zho2aV2bs"  width="59%" height="100%">
-</iframe>
+  <p>Πρεμιέρα με τη ταινία: <b>Έτερος Εγώ</b> και δώρο το making of και το ήξερες ότι.!</p>
+<iframe src="https://www.youtube.com/embed/y3zho2aV2bs"  width="60%" height="100%"></iframe>
+<iframe src="https://www.youtube.com/embed/VRefVArMcnk"  width="20%" height="100%"></iframe>
+<iframe src="https://www.youtube.com/embed/BHPX1twKrgE"  width="15%" height="100%"></iframe>
 
-<iframe src="https://www.youtube.com/embed/VRefVArMcnk"  width="39%" height="100%">
-</iframe>
+<br>
+ <p>2η βδομάδα με τη ταινία: <b>Happiness</b> και δώρο το 
+Are You Lost In The World Like Me του Steve Cutts!</p>
+<iframe src="https://www.youtube.com/embed/4yBrW0zG8y8"  width="35%" height="100%"></iframe>
+<iframe src="https://www.youtube.com/embed/e9dZQelULDk"  width="60%" height="100%"></iframe>
+
+
 
 </div>
-
 </body>
 </html>
