--- a/newsletters.html
+++ b/newsletters.html
@@ -106,6 +106,13 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <div class="w3-center">
 <iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div>
 <!-- ////////////////////////////////////////////////////////// -->
+	  
+<rssapp-ticker id="G5Gym187KzbQwYFt"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
+
+<rssapp-wall id="G5Gym187KzbQwYFt"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+
+<rssapp-ticker id="ZzkE2I5STvhSmfqp"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
+	  
 <!-- Section //////////////////////////////////////////// -->
 <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">Links</span></h5>
 <div class="w3-center">
