--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!--
   ==========================================================================
   
@@ -6,10 +7,10 @@
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
   
     Alien v2
-    Updated: SpecialPage 'Privacy Statement & Terms of Use' Nov 18, 2020
+    Updated: SpecialPage 'Privacy Statement & Terms of Use' Dec 07 2020
     Website: https://alexandroshub.github.io
     Contact: 	a-papaspyrou@outlook.com.gr
-  CC-BY international 4 2011-2020 Alexandros Papaspyrou
+    CC-BY international 4 2011-2020 Alexandros Papaspyrou
     
     
    Welcome in my personal website 100% HTML Hosted by Github
@@ -280,9 +281,8 @@
               <div class="w3-container w3-display-container w3-round w3-black w3-border w3-theme-border w3-margin-bottom">
                 <span onclick="this.parentElement.style.display='none'" class="w3-button w3-red w3-display-topright"><i class="fa fa-remove"></i></span>
                 <h3><strong>update</strong></h3>
-                <p> Απο 9/11 αποσύρεται το app της Hotjar και του appzi.   <br>
-                  Από 10/11 κάθε σύνδεσμος προς συστημικά και μιντιακά links θα θεωρείται αμφιβόλου ηθικής.<br><br>
-                  <span class="w3-tag w3-black"><i class="fa fa-warning" style="font-size:18px;color:red"></i></span> Βάση των παρακάτω όρων χρήσης, απο 17/11 θα υπάρχει σταδιακή απόσυρση ορισμένων links προς συστημικά και μιντιακά sites. To AP παρατηρεί ότι στα μέσα αυτά υπάρχει μεγάλος όγκος τρομοκρατίας και παραπληροφόρησης σε τεχνικά επιστημονικά πολιτικά οικονομικά ηθικά και ανθρωπιστικά θέματα. <span class="w3-tag w3-black"><i class="fa fa-warning" style="font-size:18px;color:red"></i></span>
+                <p> Απο 9/11 αποσύρεται το app της Hotjar και του appzi.  <br><br>
+                  <span class="w3-tag w3-black"><i class="fa fa-warning" style="font-size:18px;color:red"></i></span> Απο 7/12 Θα υπάρξει επέκταση της συμμόρφωσης της σελίδας με τον γενικό κανονισμό GDPR σε ότι αφορά τα προσωπικά δεδομένα που συλλέγονται έπειτα από συναίνεση. Με απλά λόγια εφόσον συμπληρώσετε κάποιο όνομα στοιχεία επικοινωνίας όπως email ή τηλέφωνο το alexandroshub πλέον διατηρεί το δικαίωμα να αποθηκεύει τα στοιχεία αυτά σε βάσεις δεδομένων. Μπορείτε να διαγραφείτε οποιαδήποτε στιγμή, στέλνοντας με μήνυμα "διαγραφή, ονοματεπώνυμο, τηλέφωνο ή email" σε facebook, instagram ή  email στο alexispapy@gmail.com με θέμα "διαγραφή από mailing lists"<span class="w3-tag w3-black"><i class="fa fa-warning" style="font-size:18px;color:red"></i></span>
                 </p>
               </div>
               <p> Με κάθε σας επίσκεψη σε ιστοσελίδα του domain <b><font color="#FF5733">https://alexandroshub.github.io </font></b> , δηλώνετε ότι αποδέχεστε στο σύνολο της Πολιτικής απορρήτου, χρήσης, Cookies και το σύνολο τον διευκρινίσεων, όπως αυτες φαίνονται στο <b><font color="#FF5733">https://alexandroshub.github.io/about </font></b>.
@@ -427,14 +427,12 @@
           <button class="accordion2">Προσωπικά Δεδομένα
           </button>
           <div class="panel">
-            <span class="w3-large w3-center" style="background-color: #003366; color: white; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Το alexandroshub δε συλλέγει και κατ' επέκταση δεν επεξεργάζεται τα προσωπικά σας δεδομένα.</span>
-            <span class="w3-small w3-center" style="background-color: red; color: white; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Παρ' όλα αυτά υπάρχουν τρίτες υπηρεσίες στη σελίδα που μπορεί να το κάνουν.</span>
-            <!--<br><b>Συλλογή έπειτα από συναίνεση:</b>
+<br><b>Συλλογή έπειτα από συναίνεση:</b>
               <p>Η κατηγορία αυτή περιλαμβάνει δεδομένα όπως το όνομά σας ή κάποιο ψευδώνυμο, τη διεύθυνση ηλεκτρονικού ταχυδρομείου σας και κάθε πληροφορία που παρέχετε μέσω του συστήματος σχολιασμού ή της φόρμας επικοινωνίας. Για τη συλλογή των δεδομένων αυτών είναι απαραίτητη η συναίνεση από μέρους σας, δηλαδή χρειάζεται να πραγματοποιήσετε κάποια εισαγωγή στοιχείων ή επιλογή ενός σχετικού πλαισίου ελέγχου.</p>
               <br><b>Δικαιώματα που έχετε επί των δεδομένων σας.</b>
                  <p>Εάν σχολιάσατε στην ιστοσελίδα μας ή επικοινωνήσατε μαζί μας μέσω της φόρμας, μπορείτε να ζητήσετε ένα αρχείο με τα προσωπικά σας δεδομένα που διατηρούμε (αν υπάρχουν). Μπορείτε επίσης να αιτηθείτε τη διαγραφή των δεδομένων σας. Αυτό δεν περιλαμβάνει δεδομένα που κρατάμε για λόγους διαχείρισης ή/και ασφάλειας.</p>
               <br><b>Με ποιον μοιραζόμαστε τα δεδομένα σας.</b>
-                 <p>Με κανέναν, ποτέ και για κανένα λόγο.</p> -->
+                 <p>Με κανέναν, ποτέ και για κανένα λόγο.</p>
           </div>
           <button class="accordion2">Ιδιοκτησία / Πνευματικά Δικαιώματα / ΑΔΕΙΑ ΧΡΗΣΗΣ
           </button>
