--- a/newsletters.html
+++ b/newsletters.html
@@ -110,12 +110,11 @@ function closeFullscreen() {
 
 
 <!-- /////////////////////////////////////////// -->
-	  
-<rssapp-ticker id="G5Gym187KzbQwYFt"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
+	  <!--
+<rssapp-ticker id="G5Gym187KzbQwYFt"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script> -->
 
-<rssapp-wall id="G5Gym187KzbQwYFt"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="TH60Tc62VaVWkiAT"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
-<rssapp-ticker id="ZzkE2I5STvhSmfqp"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
 	  
 <!--  //////////////////////////////////////////// -->
 
