--- a/newsletters.html
+++ b/newsletters.html
@@ -1,4 +1,5 @@
 
+
 <!-- SpecialPage Plus v.alien2 + icon
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -56,7 +57,8 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
     <!-- Sidebar with image -->
     <nav class="w3-sidebar" style="width:10%">
       <div class="bgimg">
-         
+          <style> pEX { writing-mode: vertical-rl; text-orientation: upright;}</style>
+<center><pEX><h3 style="color:white;"  id="home"><b>newsletters</b></h3></pEX></center>
 </div>     
     </nav>
     <!-- Page Content -->
@@ -112,7 +114,14 @@ function closeFullscreen() {
 <!-- /////////////////////////////////////////// -->
 	  <!--
 <rssapp-ticker id="G5Gym187KzbQwYFt"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script> -->
-
+ <div style="background-color: #000; color: #D1D3D8;">
+    <marquee behavior="scroll" direction="left">
+      <span class="w3-tag" style="background-color: #BD1D1F; color: #D1D3D8;"> <b>OFF THE RECORD</b> </span> <a href="https://alexispapy.tumblr.com/">soon...</a>    
+      
+      //   alexandrosHUB respects your freedom and the social solidarity of your community. So it's free as in freedom.
+    </marquee>
+  </div>
+  
 <rssapp-wall id="TH60Tc62VaVWkiAT"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
 	  
